Prepare MiniAapt to be an IsolatedStep
Summary: Need to remove references to `SourcePath` and `ProjectFilesystem`.

Reviewed By: irenewchen

fbshipit-source-id: bbc8f5099706d1a51f458016d9a7ad97ea1c6723